--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -21,6 +21,7 @@
         android:text="Tell which coin it is ?"
         android:textSize="28sp"
         android:textColor="#FF000000"
+        android:fontFamily="@font/baloo2_regular"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="12dp" />
 
