--- a/app/src/main/res/layout/activity_timemeasurement.xml
+++ b/app/src/main/res/layout/activity_timemeasurement.xml
@@ -16,6 +16,7 @@
         android:text="Set the clock to: 09:15"
         android:textSize="22sp"
         android:textStyle="bold"
+
         android:background="@drawable/text_box_bg"
         android:gravity="center"
         android:layout_gravity="center_horizontal"
@@ -28,6 +29,17 @@
         android:layout_width="320dp"
         android:layout_height="320dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="25dp"
+        android:layout_marginBottom="15dp"
         android:background="@android:color/transparent"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Move the hands of the clock to adjust the given time above"
+        android:textSize="26sp"
+        android:fontFamily="@font/baloo2_regular"
+        android:gravity="center"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:textColor="#000000"/>
 </LinearLayout>
